--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <header>Hello</header>
+    <header>
+      <nav>
+        <a href="index.html"><span>Web</span><span>Studio</span></a>
+        <a href="#Agencja">Agencja</a>
+        <a href="#Portfolio">Portfolio</a>
+        <a href="#Kontakt">Kontakt</a>
+      </nav>
+      <div>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+48 111 111 111">+48 111 111 111</a>
+      </div>
+    </header>
+    <main>
+      <article>
+        <h1>
+          EFEKTYWNE ROZWIĄZANIA<br />
+          DLA WASZEGO BIZNESU
+        </h1>
+        <button type="button" onclick="location.href='#'">Zamów usługe</button>
+      </article>
+      <article id="Agencja">
+        <ul>
+          <li style="display: inline-block">
+            <b>LOREM IPSUM</b><br />Lorem ipsum dolor sit amet, consectetur<br />
+            adipiscing elit. Nam vel arcu sem. Sed<br />
+            non sodales dui. Interdum et malesuada
+          </li>
+          <li style="display: inline-block">
+            <b>LOREM IPSUM</b><br />Lorem ipsum dolor sit amet, consectetur<br />
+            adipiscing elit. Nam vel arcu sem. Sed<br />
+            non sodales dui. Interdum et malesuada
+          </li>
+          <li style="display: inline-block">
+            <b>LOREM IPSUM</b><br />Lorem ipsum dolor sit amet, consectetur<br />
+            adipiscing elit. Nam vel arcu sem. Sed<br />
+            non sodales dui. Interdum et malesuada
+          </li>
+          <li style="display: inline-block">
+            <b>LOREM IPSUM</b><br />Lorem ipsum dolor sit amet, consectetur<br />
+            adipiscing elit. Nam vel arcu sem. Sed<br />
+            non sodales dui. Interdum et malesuada
+          </li>
+        </ul>
+
+        <h2>Czym się zajmujemy</h2>
+        <img
+          src="images/GoIT1.jpg"
+          alt="programer working his desk office"
+          width="370"
+          height="294"
+        />
+        <img
+          src="images/GoIT2.jpg"
+          alt="programer working his desk office"
+          width="370"
+          height="294"
+        />
+        <img
+          src="images/GoIT3.jpg"
+          alt="programer working his desk office"
+          width="370"
+          height="294"
+        />
+      </article>
+      <figure id="Portfolio">
+        <h2>Nasz zespół</h2>
+
+        <img src="images/john1.jpg" alt="John Doe" width="270" height="260" />
+        <figcaption><b>John Doe</b><br />Product Designer</figcaption>
+
+        <img src="images/john2.jpg" alt="John Doe" width="270" height="260" />
+        <figcaption><b>John Doe</b><br />Frontend Developer</figcaption>
+
+        <img src="images/john3.jpg" alt="John Doe" width="270" height="260" />
+        <figcaption><b>John Doe</b><br />Marketing</figcaption>
+
+        <img src="images/john4.jpg" alt="John Doe" width="270" height="260" />
+        <figcaption><b>John Doe</b><br />UI Designer</figcaption>
+      </figure>
+    </main>
+
+    <footer id="Kontakt">
+      <a href="index.html"><span>Web</span><span>Studio</span></a>
+      <address>
+        m. Warszawa, Aleje Jerozolimskie 21<br />info@example.com<br />+48 111
+        111 111
+      </address>
+    </footer>
   </body>
 </html>
