--- a/index.html
+++ b/index.html
@@ -8,89 +8,147 @@
     <header>
       <nav>
         <a href="index.html"><span>Web</span><span>Studio</span></a>
-        <a href="#Agencja">Agencja</a>
-        <a href="#Portfolio">Portfolio</a>
-        <a href="#Kontakt">Kontakt</a>
+        <ul>
+          <li><a href="index.html">Agencja</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Kontakt</a></li>
+        </ul>
       </nav>
       <div>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+48 111 111 111">+48 111 111 111</a>
+        <a href="tel:+48111111111">+48111111111</a>
       </div>
     </header>
     <main>
-      <article>
-        <h1>
-          EFEKTYWNE ROZWIĄZANIA<br />
-          DLA WASZEGO BIZNESU
-        </h1>
-        <button type="button" onclick="location.href='#'">Zamów usługe</button>
-      </article>
-      <article id="Agencja">
+      <section>
+        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button type="button">Zamów usługe</button>
+      </section>
+      <section>
+        <h2>Nasze atuty</h2>
         <ul>
-          <li style="display: inline-block">
-            <b>LOREM IPSUM</b><br />Lorem ipsum dolor sit amet, consectetur<br />
-            adipiscing elit. Nam vel arcu sem. Sed<br />
-            non sodales dui. Interdum et malesuada
+          <li>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
           </li>
-          <li style="display: inline-block">
-            <b>LOREM IPSUM</b><br />Lorem ipsum dolor sit amet, consectetur<br />
-            adipiscing elit. Nam vel arcu sem. Sed<br />
-            non sodales dui. Interdum et malesuada
+          <li>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
           </li>
-          <li style="display: inline-block">
-            <b>LOREM IPSUM</b><br />Lorem ipsum dolor sit amet, consectetur<br />
-            adipiscing elit. Nam vel arcu sem. Sed<br />
-            non sodales dui. Interdum et malesuada
+          <li>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
           </li>
-          <li style="display: inline-block">
-            <b>LOREM IPSUM</b><br />Lorem ipsum dolor sit amet, consectetur<br />
-            adipiscing elit. Nam vel arcu sem. Sed<br />
-            non sodales dui. Interdum et malesuada
+          <li>
+            <h3>LOREM IPSUM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
           </li>
         </ul>
-
+      </section>
+      <section>
         <h2>Czym się zajmujemy</h2>
-        <img
-          src="images/GoIT1.jpg"
-          alt="programer working his desk office"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/GoIT2.jpg"
-          alt="programer working his desk office"
-          width="370"
-          height="294"
-        />
-        <img
-          src="images/GoIT3.jpg"
-          alt="programer working his desk office"
-          width="370"
-          height="294"
-        />
-      </article>
-      <figure id="Portfolio">
+        <ul>
+          <li>
+            <img
+              src="images/GoIT1.jpg"
+              alt="programer working his desk office"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/GoIT2.jpg"
+              alt="programer working his desk office"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/GoIT3.jpg"
+              alt="programer working his desk office"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
         <h2>Nasz zespół</h2>
+        <ul>
+          <li>
+            <img
+              src="images/john1.jpg"
+              alt="John Doe"
+              width="270"
+              height="260"
+            />
+            <h3>John Doe</h3>
+            <p>Designer</p>
+          </li>
 
-        <img src="images/john1.jpg" alt="John Doe" width="270" height="260" />
-        <figcaption><b>John Doe</b><br />Product Designer</figcaption>
+          <li>
+            <img
+              src="images/john2.jpg"
+              alt="John Doe"
+              width="270"
+              height="260"
+            />
+            <h3>John Doe</h3>
+            <p>Frontend Developer</p>
+          </li>
 
-        <img src="images/john2.jpg" alt="John Doe" width="270" height="260" />
-        <figcaption><b>John Doe</b><br />Frontend Developer</figcaption>
+          <li>
+            <img
+              src="images/john3.jpg"
+              alt="John Doe"
+              width="270"
+              height="260"
+            />
+            <h3>John Doe</h3>
+            <p>Marketing</p>
+          </li>
 
-        <img src="images/john3.jpg" alt="John Doe" width="270" height="260" />
-        <figcaption><b>John Doe</b><br />Marketing</figcaption>
-
-        <img src="images/john4.jpg" alt="John Doe" width="270" height="260" />
-        <figcaption><b>John Doe</b><br />UI Designer</figcaption>
-      </figure>
+          <li>
+            <img
+              src="images/john4.jpg"
+              alt="John Doe"
+              width="270"
+              height="260"
+            />
+            <h3>John Doe</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer id="Kontakt">
       <a href="index.html"><span>Web</span><span>Studio</span></a>
       <address>
-        m. Warszawa, Aleje Jerozolimskie 21<br />info@example.com<br />+48 111
-        111 111
+        <ul>
+          <li>
+            <a
+              href="https://www.google.com/search?q=m.+Warszawa%2C+Aleje+Jerozolimskie+21&oq=m.+Warszawa%2C+Aleje+Jerozolimskie+21&aqs=chrome.0.69i59.1022j0j9&sourceid=chrome&ie=UTF-8#"
+              >m. Warszawa, Aleje Jerozolimskie 21</a
+            >
+          </li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+        </ul>
       </address>
     </footer>
   </body>
