--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
       <address>
         <ul>
           <li>
-            <a
-              href="https://www.google.com/search?q=m.+Warszawa%2C+Aleje+Jerozolimskie+21&oq=m.+Warszawa%2C+Aleje+Jerozolimskie+21&aqs=chrome.0.69i59.1022j0j9&sourceid=chrome&ie=UTF-8#"
+            <a href="https://goo.gl/maps/Hht78EQZUjDa7jrKA"
               >m. Warszawa, Aleje Jerozolimskie 21</a
             >
           </li>
