target i rel do adresu

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/Hht78EQZUjDa7jrKA"
+            <a href="https://goo.gl/maps/Hht78EQZUjDa7jrKA" target="" rel=""
               >m. Warszawa, Aleje Jerozolimskie 21</a
             >
           </li>
