--- a/index.html
+++ b/index.html
@@ -141,7 +141,10 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/Hht78EQZUjDa7jrKA" target="" rel=""
+            <a
+              href="https://goo.gl/maps/Hht78EQZUjDa7jrKA"
+              target="_blank"
+              rel="noopener nofollow"
               >m. Warszawa, Aleje Jerozolimskie 21</a
             >
           </li>
